--- a/portfolio.css
+++ b/portfolio.css
@@ -84,5 +84,82 @@ nav ul{
     background-image: url(./images/developer.png) , url(./images/header_bg.png);
     background-repeat: no-repeat;
     background-position: top left, bottom right;
-    margin-left: 22px;
+    margin: 22px;
+    max-width: 2232px;
 }
+
+.dackcl{
+    background-color: #FFF8F3;
+}
+
+.txt-size{
+    font-size: 35px;
+    color: #181818;
+}
+
+.mar{
+    margin-top: 0px;
+}
+
+main{
+    max-width: 1140px;
+    margin: 0 auto;
+}
+
+.about{
+    padding: 131px 156px;
+    text-align: center;
+    margin-top: 130px;
+    border-radius: 10px;
+
+}
+
+.auto{
+    background-color: #FFFFFF;
+    border: 1px solid black;
+}
+
+.d3{
+    color: #757575;
+}
+.auto3{
+    display: flex;
+    justify-content: space-around;
+    margin-top: 30px;
+}
+
+.auto5{
+    font-size: 20px;
+    color: #757575;
+}
+
+.auto6{
+    margin-top: 0px;
+    font-size: 20px;
+    color: #474747;
+}
+
+.skill1{
+    font-size: 35px;
+    text-align: center;
+    color: #181818;
+    margin-top: 143px;
+}
+
+.skill2{
+    font-size: 18px;
+    text-align: center;
+    color: #757575;
+}
+
+.skill3{
+    margin-top: 20px;
+    display: flex;
+    gap: 24px;
+}
+
+.skill4{
+    padding: 30px;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.08);
+}
+
