--- a/portfolio.css
+++ b/portfolio.css
@@ -163,3 +163,41 @@ main{
     box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.08);
 }
 
+.ccl{
+    font-size: 35px;
+    text-align: center;
+    margin-top: 130px;
+    margin-bottom: 113px;
+}
+
+.res1{
+    display: flex;
+    gap: 24px;
+}
+
+.res3{
+    font-size: 30px;
+    color: #474747;
+}
+
+.res6{
+    font-size: 25px;
+    color: #474747;
+}
+
+.res7{
+    font-size: 20px;
+    color: #757575;
+}
+
+.res8{
+    font-size: 16px;
+    color: #757575;
+}
+
+.res9{
+    text-align: center;
+    margin-top: 50px;
+    margin-bottom: 113px;
+}
+
